Fixed a Safari compatibility issue that was left-aligning the equation creation button.

--- a/app/assets/stylesheets/editor.css.scss
+++ b/app/assets/stylesheets/editor.css.scss
@@ -14,6 +14,9 @@
 
 /* Center submit button. */
 #new_equation_submit {
-  display: block;
-  margin: auto;
+  display: inline;
+}
+
+#new_equation_submit_paragraph {
+  text-align: center;
 }
